Add GitHub Actions workflow for Coder deployment

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,4 +23,4 @@ jobs:
 
       - name: Deploy to Coder
         run: |
-          coder envs apply my-env --project my-project --file coder.yaml
+          coder envs apply --project my-project --file coder.yaml
