--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,17 +10,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-      - name: Install Coder CLI
-        run: |
-          curl -fsSL https://coder.com/install.sh | sh
+    - name: Set up SSH
+      uses: webfactory/ssh-agent@v0.5.3
+      with:
+        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-      - name: Authenticate with Coder
-        run: |
-          coder login ${{ secrets.CODER_URL }} --token ${{ secrets.CODER_SESSION_TOKEN }}
+    - name: Install Docker Compose
+      run: |
+        sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+        sudo chmod +x /usr/local/bin/docker-compose
+        docker-compose --version
 
-      - name: Deploy to Coder
-        run: |
-          coder envs apply --project my-project --file coder.yaml
+    - name: Deploy with Docker Compose
+      run: |
+        ssh -o StrictHostKeyChecking=no coder@${{ secrets.CODER_URL }} << EOF
+          cd /home/coder/SampleTest
+          docker-compose down
+          docker-compose up --build -d
+        EOF
