--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,24 +10,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-    - name: Set up SSH
-      uses: webfactory/ssh-agent@v0.5.3
-      with:
-        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+      - name: Set up Docker
+        uses: docker/setup-buildx-action@v1
 
-    - name: Install Docker Compose
-      run: |
-        sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-        sudo chmod +x /usr/local/bin/docker-compose
-        docker-compose --version
+      - name: Install coder CLI
+        run: |
+          curl -fsSL https://coder.com/install.sh | sh
 
-    - name: Deploy with Docker Compose
-      run: |
-        ssh -o StrictHostKeyChecking=no coder@${{ secrets.CODER_URL }} << EOF
-          cd /home/coder/SampleTest
-          docker-compose down
-          docker-compose up --build -d
-        EOF
+      - name: Log in to Coder
+        run: coder login ${{ secrets.CODER_URL }} --token ${{ secrets.CODER_TOKEN }}
+        
+      - name: Deploy with Docker Compose
+        run: |
+          ssh -o StrictHostKeyChecking=no coder@${{ secrets.CODER_HOST }} << EOF
+            cd /home/coder/SampleTest
+            docker-compose down
+            docker-compose up --build -d
+          EOF
