--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,4 +22,5 @@ jobs:
 
       - name: Deploy with Docker Compose
         run: |
-           ssh -- "coder.SampleTest && docker-compose down && docker-compose up --build -d"
+           ssh user@vm_address "[ -d /home/coder/SampleTest ] && cd /home/coder/SampleTest && coder.SampleTest && docker-compose down && docker-compose up --build -d || echo 'Directory does not exist'"
+
