--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,16 +21,13 @@ jobs:
         run: |
           coder login ${{ secrets.CODER_URL }} --token ${{ secrets.CODER_SESSION_TOKEN }}
           # adds coder workspace Host to ~/.ssh/config
-          coder config-ssh
-    
-      - uses: mxschmitt/action-tmate@v3
-        with:
-          limit-access-to-actor: false
+          coder config-ssh -y
 
       - name: Deploy with Docker Compose
         run: |
           ssh coder.SampleTest 'mkdir -p ~/SampleTest'
-          scp * coder.test:~/SampleTest
+          # copy the repo to workspace host
+          scp * coder.SampleTest:~/SampleTest
           ssh coder.SampleTest << 'EOF'
             cd ~/SampleTest
             docker-compose down
