--- a/backend/auth/package.json
+++ b/backend/auth/package.json
@@ -14,25 +14,25 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.17.1",
-    "knex": "^0.21.6",
-    "objection": "^2.2.3",
+    "knex": "^3.1.0",
+    "objection": "^3.1.4",
     "pg": "^8.3.3"
   },
   "devDependencies": {
-    "jest": "^26.6.3"
+    "jest": "^29.7.0"
   },
   "jest": {
-		"coverageThreshold": {
-			"global": {
-				"branches": 50,
-				"functions": 50,
-				"lines": 50
-			}
-		},
-		"collectCoverageFrom": [
-			"**/controllers/*"
-		]
-	}
-  
+    "coverageThreshold": {
+      "global": {
+        "branches": 50,
+        "functions": 50,
+        "lines": 50
+      }
+    },
+    "collectCoverageFrom": [
+      "**/controllers/*"
+    ]
+  }
 }
