--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,15 @@ services:
   postgres:
     image: postgres:16
     environment:
-      POSTGRES_USER: your_username
-      POSTGRES_PASSWORD: your_password
-      POSTGRES_DB: your_database
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: db1
+      PGDATA: /var/lib/postgresql/data/pgdata
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data/pgdata
+      - ./init-db.sh:/docker-entrypoint-initdb.d/init-db.sh
+    ports:
+      - 5432:5432
     networks:
       - backend
 
@@ -24,8 +28,12 @@ services:
       context: ./backend/auth
       dockerfile: Dockerfile
     environment:
-      GUARD_PORT: 4000
-      DATABASE_URL: postgres://your_username:your_password@postgres:5432/your_database
+      POSTGRES_USER: m4rry
+      POSTGRES_PASSWORD: umair123
+      POSTGRES_DB: db1
+      POSTGRES_HOST: postgres
+      DATABASE_URL: postgres://m4rry:umair123@postgres:5432/db1
+      NODE_ENV: development
     depends_on:
       - postgres
     networks:
